# MFAC

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
examples/: mimo_cfdl_model1.py  siso_cfdl_model1.py  siso_cfdl_simple.py  siso_cfdl_wingerden.py  siso_pfdl_simple.py  test_mimo_plant.py  test_plant.py  test_siso_plant.py
src/mfac/: __init__.py  mfac.py
src/mfac/controllers/: __init__.py  cfdl.py  ffdl.py  pfdl.py
src/mfac/plants/mimo/: __init__.py  model1.py
src/mfac/plants/siso/: __init__.py  model1.py  wingerden.py
