[metadata]
name = mfac
version = 0.0.1
author = Shahin Darvishpoor
author_email = Shahindarvishpoor@gmail.com
description = Model Free Adaptive Control Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shahind/MFAC
project_urls =
    Bug Tracker = https://github.com/shahind/MFAC/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
